--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 align="center">Aion Library</h2>
 
         <div align="center" class="large">
-            <p><a href="/ap.html">Калькулятор АП</a></p>
+            <p><a href="ap.html">Калькулятор АП</a></p>
             <p><a href="#">Калькулятор шмота</a> &mdash; В разработке</p>
         </div>
     </div>
