--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <title>Aion Library</title>
 
-    <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
+    <link rel="stylesheet" href="css/blueprint/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">
     <!--[if lt IE 8]>
-        <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
+        <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
 
-    <script language="javascript" src="/js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
+    <script language="javascript" src="js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
 </head>
 <body>
     <div class="container">
