--- a/ap.html
+++ b/ap.html
@@ -4,25 +4,25 @@
 <head>
     <title>Aion Library</title>
 
-    <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
+    <link rel="stylesheet" href="css/blueprint/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">
     <!--[if lt IE 8]>
-        <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
+        <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
 
-    <link rel="stylesheet" href="/css/ap.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="css/ap.css" type="text/css" media="screen, projection">
 
-    <script language="javascript" src="/js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
-    <script language="javascript" src="/js/Element.serialize.js"></script>
+    <script language="javascript" src="js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
+    <script language="javascript" src="js/Element.serialize.js"></script>
 
-    <script language="javascript" src="/js/main.js"></script>
+    <script language="javascript" src="js/main.js"></script>
 </head>
 <body>
     <div class="container">
         <h2 align="center">Aion Library &mdash; Калькулятор АП</h2>
 
         <ul>
-            <li><a href="/">На главную</a></li>
+            <li><a href="index.html">На главную</a></li>
         </ul>
 
         <p><label>Текущее количество очков бездны <input type="text" id="now-ap" name="now-ap" value="0" /></label></p>
@@ -31,25 +31,25 @@
         <div class="span-24 last">
             <div class="span-10">
                 <div class="items">
-                    <img src="/images/ap/icon_1.png" />
+                    <img src="images/ap/icon_1.png" />
                     Простая древняя икона
                     <span>(300 ап)</span>
                     <input type="text" name="items[icon][0]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/icon_2.png" />
+                    <img src="images/ap/icon_2.png" />
                     Обычная древняя икона
                     <span>(600 ап)</span>
                     <input type="text" name="items[icon][1]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/icon_3.png" />
+                    <img src="images/ap/icon_3.png" />
                     Дорогая древняя икона
                     <span>(900 ап)</span>
                     <input type="text" name="items[icon][2]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/icon_4.png" />
+                    <img src="images/ap/icon_4.png" />
                     Бесценная древняя икона
                     <span>(1200 ап)</span>
                     <input type="text" name="items[icon][3]" value="0" />
@@ -58,25 +58,25 @@
             <div class="span-2">&nbsp;</div>
             <div class="span-10 last">
                 <div class="items">
-                    <img src="/images/ap/seal_1.png" />
+                    <img src="images/ap/seal_1.png" />
                     Простая древняя печать
                     <span>(600 ап)</span>
                     <input type="text" name="items[seal][0]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/seal_2.png" />
+                    <img src="images/ap/seal_2.png" />
                     Обычная древняя печать
                     <span>(1200 ап)</span>
                     <input type="text" name="items[seal][1]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/seal_3.png" />
+                    <img src="images/ap/seal_3.png" />
                     Дорогая древняя печать
                     <span>(1800 ап)</span>
                     <input type="text" name="items[seal][2]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/seal_4.png" />
+                    <img src="images/ap/seal_4.png" />
                     Бесценная древняя печать
                     <span>(2400 ап)</span>
                     <input type="text" name="items[seal][3]" value="0" />
@@ -87,26 +87,26 @@
 
             <div class="span-10">
                 <div class="items">
-                    <img src="/images/ap/cup_1.png" />
+                    <img src="images/ap/cup_1.png" />
                     Простая древняя чаша
                     <span>(1200 ап)</span>
                     <input type="text" name="items[cup][0]" value="0" />
                 </div>
 
                 <div class="items">
-                    <img src="/images/ap/cup_2.png" />
+                    <img src="images/ap/cup_2.png" />
                     Обычная древняя чаша
                     <span>(2400 ап)</span>
                     <input type="text" name="items[cup][1]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/cup_3.png" />
+                    <img src="images/ap/cup_3.png" />
                     Дорогая древняя чаша
                     <span>(3600 ап)</span>
                     <input type="text" name="items[cup][2]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/cup_4.png" />
+                    <img src="images/ap/cup_4.png" />
                     Бесценная древняя чаша
                     <span>(4800 ап)</span>
                     <input type="text" name="items[cup][3]" value="0" />
@@ -115,13 +115,13 @@
             <div class="span-2">&nbsp;</div>
             <div class="span-10 last">
                 <div class="items">
-                    <img src="/images/ap/crown_1.png" />
+                    <img src="images/ap/crown_1.png" />
                     Простая древняя корона
                     <span>(2400 ап)</span>
                     <input type="text" name="items[crown][0]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/crown_2.png" />
+                    <img src="images/ap/crown_2.png" />
                     Обычная древняя корона
                     <span>(4800 ап)</span>
                     <input type="text" name="items[crown][1]" value="0" />
@@ -133,7 +133,7 @@
                     <input type="text" name="items[crown][2]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/crown_4.png" />
+                    <img src="images/ap/crown_4.png" />
                     Бесценная древняя корона
                     <span>(6900 ап)</span>
                     <input type="text" name="items[crown][3]" value="0" />
