--- a/ap.html
+++ b/ap.html
@@ -127,7 +127,7 @@
                     <input type="text" name="items[crown][1]" value="0" />
                 </div>
                 <div class="items">
-                    <img src="/images/ap/crown_3.png" />
+                    <img src="images/ap/crown_3.png" />
                     Дорогая древняя корона
                     <span>(7200 ап)</span>
                     <input type="text" name="items[crown][2]" value="0" />
