--- a/public/armor.html
+++ b/public/armor.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+    
     <title>Aion Library</title>
 
     <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
@@ -11,16 +12,22 @@
         <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
 
+    <link rel="stylesheet" href="/css/ap.css" type="text/css" media="screen, projection">
+
     <script language="javascript" src="/js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
+    <script language="javascript" src="/js/Element.serialize.js"></script>
+
+    <script language="javascript" src="/js/main.js"></script>
 </head>
 <body>
     <div class="container">
-        <h2 align="center">Aion Library</h2>
+        <h2 align="center">Aion Library &mdash; Калькулятор АП</h2>
 
-        <div align="center" class="large">
-            <p><a href="/ap.php">Калькулятор АП</a></p>
-            <p><a href="#">Калькулятор шмота</a></p>
-        </div>
+        <ul>
+            <li><a href="/">На главную</a></li>
+        </ul>
+
+        
     </div>
 </body>
 </html>
