--- a/public/ap.html
+++ b/public/ap.html
@@ -2,6 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <title>Aion Library</title>
 
     <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
