Допиливаем калькулятор распределения итемов

--- a/public/ap.html
+++ b/public/ap.html
@@ -146,7 +146,11 @@
         <hr class="space" />
 
         <div><div class="end">Итогове количество очков бездны после обмена:</div> <span id="end">0</span></div>
+
+        <div><label>Количество игроков: <input type="text" id="usersCound" name="usersCound" value="0" /></label></div>
+        <div><a href="#" id="calcPeople">Распределить</a></div>
     </div>
+
 
     <script language="javascript">
         window.addEvent('domready', function() {
