--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <h2 align="center">Aion Library</h2>
 
         <div align="center" class="large">
-            <p><a href="/ap.php">Калькулятор АП</a></p>
+            <p><a href="/ap.html">Калькулятор АП</a></p>
             <p><a href="#">Калькулятор шмота</a></p>
         </div>
     </div>
