--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,23 @@
         <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
 
+    <link rel="stylesheet" href="/css/index.css" type="text/css" media="screen, projection">
+
     <script language="javascript" src="/js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h2 align="center">Aion Library</h2>
+    <div style="height: 50px;">&nbsp;</div>
+    <div class="container" style="text-align: center;">
+        <img src="/images/logo.png" style="margin-bottom: 50px;" />
 
-        <div align="center" class="large">
-            <p><a href="/ap.html">Калькулятор АП</a></p>
-            <p><a href="#">Калькулятор шмота</a></p>
-        </div>
+        <h1 style="margin-bottom: 50px;">Aion Library</h1>
+
+        <ul class="menu">
+            <li>
+                <a href="/ap.html">Калькулятор АП Aion</a>
+                <span>Aion abyss points AP calculator</span>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
