Изменен дизайн калькулятора

--- a/public/ap.html
+++ b/public/ap.html
@@ -24,20 +24,300 @@
     <h1>Aion Library</h1>
     <h3>Aion abyss points AP calculator</h3>
 </div>
-<div class="content-items">
-    <div class="span-8">
-        span
-    </div>
-    <div class="span-1">&nbsp;</div>
-    <div class="span-8">
-        span
-    </div>
-    <div class="span-1">&nbsp;</div>
-    <div class="span-5 last">
-        last
+<div class="content span-18">
+    <div class="content-items">
+        <form id="items">
+        <!-- Icon -->
+        <div class="span-7 content-items-block">
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Простая древняя иконка
+                    <span>300 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/icon_0.png" />
+                    <input type="text" name="items[icon][0]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Обычная древняя икона
+                    <span>600 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/icon_1.png" />
+                    <input type="text" name="items[icon][1]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Дорогая древняя икона
+                    <span>900 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/icon_2.png" />
+                    <input type="text" name="items[icon][2]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Бесценная древняя икона
+                    <span>1200 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/icon_3.png" />
+                    <input type="text" name="items[icon][3]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+
+        <!-- Ceal -->
+        <div class="span-7 content-items-block">
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Простая древняя печать
+                    <span>600 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/seal_0.png" />
+                    <input type="text" name="items[seal][0]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Обычная древняя печать
+                    <span>1200 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/seal_1.png" />
+                    <input type="text" name="items[seal][1]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Дорогая древняя печать
+                    <span>1800 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/seal_2.png" />
+                    <input type="text" name="items[seal][2]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Бесценная древняя печать
+                    <span>2400 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/seal_3.png" />
+                    <input type="text" name="items[seal][3]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+        
+        <hr class="space" />
+
+        <!-- Cup -->
+        <div class="span-7 content-items-block">
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Простая древняя чаша
+                    <span>1200 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/cup_0.png" />
+                    <input type="text" name="items[cup][0]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Обычная древняя чаша
+                    <span>2400 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/cup_1.png" />
+                    <input type="text" name="items[cup][1]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Дорогая древняя чаша
+                    <span>3600 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/cup_2.png" />
+                    <input type="text" name="items[cup][2]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Бесценная древняя чаша
+                    <span>4800 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/cup_3.png" />
+                    <input type="text" name="items[cup][3]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+
+        <!-- Crown -->
+        <div class="span-7 content-items-block">
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Простая древняя корона
+                    <span>2400 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/crown_0.png" />
+                    <input type="text" name="items[crown][0]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Обычная древняя корона
+                    <span>4800 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/crown_1.png" />
+                    <input type="text" name="items[crown][1]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Дорогая древняя корона
+                    <span>7200 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/crown_2.png" />
+                    <input type="text" name="items[crown][2]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <div class="content-items-cell">
+                <div class="left content-items-infoblock">
+                    Бесценная древняя корона
+                    <span>9600 APs</span>
+                </div>
+                <div class="right content-items-imageblock">
+                    <img src="/images/ap/crown_3.png" />
+                    <input type="text" name="items[crown][3]" value="0" />
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        </form>
     </div>
 
-    <div class="clear"></div>
+    <hr class="space" />
+
+    <div class="content-group">
+        <div>
+            <label>
+                Выберите количество игроков в группе
+                <select id="userCound">
+                    <option>2</option><option>3</option><option>4</option><option>5</option><option>6</option>
+                </select>
+            </label>
+            &mdash; <a href="#">Распределить на группу</a>
+        </div>
+
+        <div id="content-group-legend">
+            <div class="group-block">
+                <div class="group-block-title left">
+                    1
+                    <span>3600</span>
+                </div>
+                <div class="group-block-items right">
+                    <div class="group-block-item">
+                        <img src="/images/ap/crown_3.png" />
+                        Бесценная древняя корона
+                        <span>9600 APs</span>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="group-block-item">
+                        <img src="/images/ap/crown_3.png" />
+                        Бесценная древняя корона
+                        <span>9600 APs</span>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="group-block-item">
+                        <img src="/images/ap/crown_3.png" />
+                        Бесценная древняя корона
+                        <span>9600 APs</span>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <hr class="space" />
+
+            <div class="group-block">
+                <div class="group-block-title left">
+                    1
+                    <span>3600</span>
+                </div>
+                <div class="group-block-items right">
+                    <div class="group-block-item">
+                        <img src="/images/ap/crown_3.png" />
+                        Бесценная древняя корона
+                        <span>9600 APs</span>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+    </div>
 </div>
+
+<div class="right-menu">
+    <div id="aps-all" class="aps-all">0</div>
+    <p>Ваши очки бездны</p>
+
+    <p>
+        <a href="#">Сброс</a><br />
+        <a href="#">Распределить на группу</a>
+    </p>
+    <p>
+        <a href="#">Получить ссылку на билд</a>
+    </p>
+</div>
+
+<script language="javascript">
+    window.addEvent('domready', function() {
+        var a = new Ap({'formId':'items', 'resultId': 'aps-all'});
+    });
+</script>
 </body>
 </html>
