Удален старый дизайн Закоменчена ссылка "Получить ссылку на билд"

--- a/public/ap.html
+++ b/public/ap.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="header">
-    <a href="/" style="text-decoration: none;">
+    <a href="/" style="text-decoration: none">
         <img src="/images/logo.png" />
         <h1>Aion Library</h1>
         <h3>Aion abyss points AP calculator</h3>
