Удален старый дизайн Закоменчена ссылка "Получить ссылку на билд"

--- a/public/ap.html
+++ b/public/ap.html
@@ -20,9 +20,11 @@
 </head>
 <body>
 <div class="header">
-    <img src="/images/logo.png" />
-    <h1>Aion Library</h1>
-    <h3>Aion abyss points AP calculator</h3>
+    <a href="/" style="text-decoration: none;">
+        <img src="/images/logo.png" />
+        <h1>Aion Library</h1>
+        <h3>Aion abyss points AP calculator</h3>
+    </a>
 </div>
 <div class="content span-18">
     <div class="content-items">
@@ -263,9 +265,11 @@
         <a href="#" id="clear">Сброс</a><br />
         <a href="#" class="calcPeople">Распределить на группу</a>
     </p>
+    <!--
     <p>
         <a href="#">Получить ссылку на билд</a>
     </p>
+    -->
 
     <p>&nbsp;</p>
     
