Начало разработки ArmorClass

--- a/ap.html
+++ b/ap.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
-    <title>Aion Library</title>
+    <title>Ap калькулятор &mdash; Aion Library</title>
 
     <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
     <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
