--- a/ap.html
+++ b/ap.html
@@ -23,7 +23,10 @@
     <a href="/" style="text-decoration: none">
         <img src="/images/logo.png" />
         <h1>Aion Library</h1>
-        <h3>Aion abyss points AP calculator</h3>
+        <h3>Aion abyss points AP calculator&nbsp;
+            <!-- Place this tag where you want the +1 button to render -->
+            <div class="g-plusone" data-size="small" data-annotation="none"></div>
+        </h3>
     </a>
 </div>
 <div class="content span-18">
@@ -332,5 +335,7 @@ reformal_wdg_bimage = "7688f5685f7701e97daa5497d3d9c745.png";
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
+<!-- Place this tag in your head or just before your close body tag -->
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 </body>
 </html>
