--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
     <div class="container" style="text-align: center;">
         <img src="/images/logo.png" style="margin-bottom: 50px;" />
 
-        <h1 style="margin-bottom: 50px;">Aion Library</h1>
+        <div style="margin-bottom: 50px">
+            <h1>Aion Library</h1>
+
+            <!-- Place this tag in your head or just before your close body tag -->
+            <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
+            <!-- Place this tag where you want the +1 button to render -->
+            <div class="g-plusone" data-annotation="none"></div>
+        </div>
 
         <ul class="menu">
             <li>
